Fix background-color problem on index page when collapsing columns

--- a/circle/static/circle/styles.scss
+++ b/circle/static/circle/styles.scss
@@ -146,6 +146,10 @@ body {
     background-color: $content-background-color;
 }
 
+.content-col {
+    background-color: $content-background-color;
+}
+
 .text-col {
     background-color: $text-gutter-color;
 }
